[gd_scene load_steps=52 format=3 uid="uid://baw7npomtmkkb"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_vit1e"]
[ext_resource type="Shape2D" uid="uid://nbask667m70g" path="res://resources/player_stand.tres" id="2_ib8lu"]
[ext_resource type="Texture2D" uid="uid://c5holrrl658i0" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Dead/Dead.png" id="5_sytdv"]
[ext_resource type="Texture2D" uid="uid://clx7t6f2ytx7c" path="res://Assets/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="9_hvp4b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1hynr"]
atlas = ExtResource("9_hvp4b")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpubk"]
atlas = ExtResource("9_hvp4b")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5unbo"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_glm0w"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yt8x"]
atlas = ExtResource("9_hvp4b")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ag35"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2e6m"]
atlas = ExtResource("5_sytdv")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mo6j"]
atlas = ExtResource("5_sytdv")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xkmk"]
atlas = ExtResource("5_sytdv")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmdlc"]
atlas = ExtResource("5_sytdv")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx4x7"]
atlas = ExtResource("5_sytdv")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l3pf"]
atlas = ExtResource("5_sytdv")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwutt"]
atlas = ExtResource("5_sytdv")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpmxf"]
atlas = ExtResource("5_sytdv")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8rwb"]
atlas = ExtResource("5_sytdv")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny5n8"]
atlas = ExtResource("5_sytdv")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1t0a4"]
atlas = ExtResource("5_sytdv")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1klyt"]
atlas = ExtResource("5_sytdv")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kymu"]
atlas = ExtResource("5_sytdv")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_77rgx"]
atlas = ExtResource("5_sytdv")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kng4r"]
atlas = ExtResource("9_hvp4b")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v0rm"]
atlas = ExtResource("9_hvp4b")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wl17"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo8s2"]
atlas = ExtResource("9_hvp4b")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v1tm"]
atlas = ExtResource("9_hvp4b")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbc84"]
atlas = ExtResource("9_hvp4b")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fmph"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq2a8"]
atlas = ExtResource("9_hvp4b")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_secva"]
atlas = ExtResource("9_hvp4b")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxe6w"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sp0m"]
atlas = ExtResource("9_hvp4b")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vn8i"]
atlas = ExtResource("9_hvp4b")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4c3j"]
atlas = ExtResource("9_hvp4b")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wfrh"]
atlas = ExtResource("9_hvp4b")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_11vxh"]
atlas = ExtResource("9_hvp4b")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyl43"]
atlas = ExtResource("9_hvp4b")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2336"]
atlas = ExtResource("9_hvp4b")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0frm"]
atlas = ExtResource("9_hvp4b")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_n0iin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hynr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpubk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5unbo")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glm0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yt8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ag35")
}],
"loop": true,
"name": &"crouch_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2e6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mo6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xkmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmdlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx4x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l3pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwutt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpmxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8rwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1t0a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1klyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kymu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77rgx")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kng4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v0rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wl17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo8s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v1tm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbc84")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fmph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq2a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_secva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxe6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sp0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vn8i")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4c3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wfrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11vxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyl43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2336")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0frm")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_buffn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}

[sub_resource type="Animation" id="Animation_i52ua"]
resource_name = "crouch"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_07mlv"]
resource_name = "crouch_walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crouch_walk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1.8025, 4.43828),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_uixoy"]
resource_name = "death"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.6, 0.7, 0.75, 0.8, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 6, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_70ubk"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_a60w2"]
resource_name = "jump"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_e0tiy"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"run", &"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0cre"]
_data = {
"RESET": SubResource("Animation_buffn"),
"crouch": SubResource("Animation_i52ua"),
"crouch_walk": SubResource("Animation_07mlv"),
"death": SubResource("Animation_uixoy"),
"idle": SubResource("Animation_70ubk"),
"jump": SubResource("Animation_a60w2"),
"run": SubResource("Animation_e0tiy")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_vit1e")

[node name="Timer2" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = ExtResource("2_ib8lu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 14)
scale = Vector2(1.77024, 2.26911)
sprite_frames = SubResource("SpriteFrames_n0iin")
animation = &"run"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hp" type="Label" parent="CanvasLayer"]
offset_left = 1624.0
offset_top = -1.0
offset_right = 1810.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="time" type="Label" parent="CanvasLayer"]
offset_right = 169.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b0cre")
}

[node name="RayCast2D_1" type="RayCast2D" parent="."]
position = Vector2(-7, 5)
target_position = Vector2(0, -53)

[node name="RayCast2D_2" type="RayCast2D" parent="."]
position = Vector2(4, 15)
target_position = Vector2(0, -45)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
